--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 nombre: "T10-6+2SMD",
                 descripcion: "Voltage: 12V Lumen：300lm Current：210mA Power：2.5W Available Color：White Feature: dual-polarized",
                 precio: 0.00,
-                imagen: "imagenes/image191.png",
+                imagen: "imagenes/T10-6+2SMD.png",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -417,4 +417,5 @@
         window.onload = renderProductos;
     </script>
 </body>
+
 </html>
