--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 nombre: "T10 3030 3SMD",
                 descripcion: "Voltage: 12 Lumen：72lm Current：50mA Power：0.6W Available Color：White、ice blue、yellow ",
                 precio: 0.00,
-                imagen: "imagenes/image12.png",
+                imagen: "imagenes/image12.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -261,7 +261,7 @@
                 nombre: "T10 4014 15SMD CANBUS",
                 descripcion: "Voltage: 12 Lumen：252lm Current：175mA Power：2.1W Available Color：White Feature: dual-polarized ",
                 precio: 0.00,
-                imagen: "imagenes/image13.png",
+                imagen: "imagenes/image13.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -269,7 +269,7 @@
                 nombre: "T10 3014 18SMD",
                 descripcion: "Voltage: 12-24    Lumen：192lm Current：133mA Power：1.6W Available Color：White、red、yellow Feature: dual-polarized ",
                 precio: 0.00,
-                imagen: "imagenes/image14.png",
+                imagen: "imagenes/image14.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -277,7 +277,7 @@
                 nombre: "T10 3030 3SMD CANBUS",
                 descripcion: "Voltage: 12 Lumen：204lm Current：141mA Power：1.7W Available Color：White、blue、ICE blue、red、yellow、yellow Feature: dual-polarized  ",
                 precio: 0.00,
-                imagen: "imagenes/image15.png",
+                imagen: "imagenes/image15.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -285,7 +285,7 @@
                 nombre: "T10 3030 6SMD SUPER STRONG CANBUS",
                 descripcion: "Voltage: 12 Lumen：492lm Current：341mA Power：4.1W Available Color：White、blue、ICE blue、yellow、red Feature: dual-polarized",
                 precio: 0.00,
-                imagen: "imagenes/image16.png",
+                imagen: "imagenes/image16.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -293,7 +293,7 @@
                 nombre: "T10 4014 18SMD CANBUS",
                 descripcion: "Voltage: 12-24     Lumen：252lm Current：175mA Power：2.1W Available Color：White Feature: dual-polarized ",
                 precio: 0.00,
-                imagen: "imagenes/image17.png",
+                imagen: "imagenes/image17.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -301,7 +301,7 @@
                 nombre: "T10 4014 18SMD CANBUS (hot sells in USA)",
                 descripcion: "Voltage: 12 Lumen：264lm Current：183mA Power：2.2W Available Color：White、blue、ICE blue ",
                 precio: 0.00,
-                imagen: "imagenes/image18.png",
+                imagen: "imagenes/image18.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -309,7 +309,7 @@
                 nombre: "T10 4014 24SMD CANBUS",
                 descripcion: "Voltage: 12-24    Lumen：240lm Current：166mA Power：2.0W Available Color：White Feature: dual-polarized ",
                 precio: 0.00,
-                imagen: "imagenes/image19.png",
+                imagen: "imagenes/image19.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -317,7 +317,7 @@
                 nombre: "T10 4014 15SMD",
                 descripcion: "Voltage: 12 Lumen：108lm Current：75mA Power：0.9W Available Color：White Feature: dual-polarized ",
                 precio: 0.00,
-                imagen: "imagenes/image20.png",
+                imagen: "imagenes/image20.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -325,7 +325,7 @@
                 nombre: "T10 3014 18SMD CANBUS",
                 descripcion: "Voltage: 12 Lumen：204lm Current：141mA Power：1.7W Available Color：White、yellow ",
                 precio: 0.00,
-                imagen: "imagenes/image21.png",
+                imagen: "imagenes/image21.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -333,7 +333,7 @@
                 nombre: "T10 4014 24SMD",
                 descripcion: "Voltage: 12V Lumen：288lm Current：200mA Power：2.4W Available Color：White ",
                 precio: 0.00,
-                imagen: "imagenes/image22.png",
+                imagen: "imagenes/image22.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -341,7 +341,7 @@
                 nombre: "T10 3014 24SMD CANBUS",
                 descripcion: "Voltage: 12V Lumen：168lm Current：100mA Power：1.4W Available Color：White、ICE blue ",
                 precio: 0.00,
-                imagen: "imagenes/image23.png",
+                imagen: "imagenes/image23.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -349,7 +349,7 @@
                 nombre: "T10 3030 6SMD CANBUS",
                 descripcion: "Voltage: 12 Lumen：168lm Current：116mA Power：1.4W Available Color：White、red Feature: dual-polarized ",
                 precio: 0.00,
-                imagen: "imagenes/image24.png",
+                imagen: "imagenes/image24.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -357,7 +357,7 @@
                 nombre: "T10 3030 4SMD CANBUS",
                 descripcion: "Voltage: 12 Lumen：180lm Current：125mA Power：1.5W Available Color：White Feature: dual-polarized ",
                 precio: 0.00,
-                imagen: "imagenes/image25.png",
+                imagen: "imagenes/image25.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -365,7 +365,7 @@
                 nombre: "T10 3030 2SMD CANBUS",
                 descripcion: "Voltage: 12 Lumen：192lm Current：133mA Power：1.6W Available Color：White Feature: dual-polarized ",
                 precio: 0.00,
-                imagen: "imagenes/image26.png",
+                imagen: "imagenes/image26.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -373,7 +373,7 @@
                 nombre: "T10 2835 9SMD CANBUS",
                 descripcion: "Voltage: 12 Lumen：192lm Current：133mA Power：1.6W Available Color：White ",
                 precio: 0.00,
-                imagen: "imagenes/image27.png",
+                imagen: "imagenes/image27.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -381,7 +381,7 @@
                 nombre: "T10 3030 2SMD",
                 descripcion: "Voltage: 12 Lumen：60lm Current：41mA Power：0.5W Available Color：White、blue、ICE blue、yellow、red、yellow Feature: dual-polarized ",
                 precio: 0.00,
-                imagen: "imagenes/image28.png",
+                imagen: "imagenes/image28.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -389,7 +389,7 @@
                 nombre: "T10 3030 2SMD",
                 descripcion: "Voltage: 12 Lumen：60lm Current：41mA Power：0.5W Available Color：White、ICE blue、yellow ",
                 precio: 0.00,
-                imagen: "imagenes/image29.png",
+                imagen: "imagenes/image29.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -397,7 +397,7 @@
                 nombre: "T10 3030 2SMD",
                 descripcion: "Voltage: 12 Lumen：84lm Current：58mA Power：0.7W Available Color：White、blue、red、yellow ",
                 precio: 0.00,
-                imagen: "imagenes/image30.png",
+                imagen: "imagenes/image30.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -405,7 +405,7 @@
                 nombre: "T10 3030 6SMD CANBUS",
                 descripcion: "Voltage: 12 Lumen：120lm Current：83mA Power：1.0W Available Color：White Feature: dual-polarized ",
                 precio: 0.00,
-                imagen: "imagenes/image31.png",
+                imagen: "imagenes/image31.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -413,7 +413,7 @@
                 nombre: "T10 5050 6SMD CANBUS",
                 descripcion: "Voltage: 12 Lumen：192lm Current：133mA Power：1.6W Available Color：White、ICE blue ",
                 precio: 0.00,
-                imagen: "imagenes/image32.png",
+                imagen: "imagenes/image32.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -421,7 +421,7 @@
                 nombre: "T10 1COB",
                 descripcion: "Voltage: 12 Lumen：60lm Current：41mA Power：0.5W Available Color：White、blue、red、pink red Feature: dual-polarized ",
                 precio: 0.00,
-                imagen: "imagenes/image33.png",
+                imagen: "imagenes/image33.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -429,7 +429,7 @@
                 nombre: "T10 3030 2SMD",
                 descripcion: "Voltage: 12 Lumen：84lm Current：58mA Power：0.7W Available Color：White ",
                 precio: 0.00,
-                imagen: "imagenes/image34.png",
+                imagen: "imagenes/image34.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -437,7 +437,7 @@
                 nombre: "T10 2835 24SMD",
                 descripcion: "Voltage: 12 Lumen：144lm Current：100mA Power：1.2W Available Color：White ",
                 precio: 0.00,
-                imagen: "imagenes/image35.png",
+                imagen: "imagenes/image35.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -445,7 +445,7 @@
                 nombre: "T10 3030 2SMD",
                 descripcion: "Voltage: 12 Lumen：144lm Current：100mA Power：1.2W Available Color：White Feature: dual-polarized ",
                 precio: 0.00,
-                imagen: "imagenes/image36.png",
+                imagen: "imagenes/image36.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -453,7 +453,7 @@
                 nombre: "T10 5730 6SMD CANBUS",
                 descripcion: "Voltage: 12 Lumen：192lm Current：133mA Power：1.6W Available Color：White Feature: dual-polarized ",
                 precio: 0.00,
-                imagen: "imagenes/image37.png",
+                imagen: "imagenes/image37.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -461,7 +461,7 @@
                 nombre: "T10 5730 4SMDCANBUS",
                 descripcion: "Voltage: 12 Lumen：216lm Current：150mA Power：1.8W Available Color：White Feature: dual-polarized ",
                 precio: 0.00,
-                imagen: "imagenes/image38.png",
+                imagen: "imagenes/image38.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -469,7 +469,7 @@
                 nombre: "T10 2835 12SMD CANBUS",
                 descripcion: "Voltage: 12 Lumen：228lm Current：158mA Power：1.9W Available Color：White、blue、ICE blue ",
                 precio: 0.00,
-                imagen: "imagenes/image39.png",
+                imagen: "imagenes/image39.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -477,7 +477,7 @@
                 nombre: "T10 5730 10SMD CANBUS",
                 descripcion: "Voltage: 12 Lumen：240lm Current：166mA Power：2.0W Available Color：White ",
                 precio: 0.00,
-                imagen: "imagenes/image40.png",
+                imagen: "imagenes/image40.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -493,7 +493,7 @@
                 nombre: "T10 COB CANBUS",
                 descripcion: "Voltage: 12V Lumen：240lm Current：166mA Power：2.0W Available Color：White、blue、yellow ",
                 precio: 0.00,
-                imagen: "imagenes/image42.png",
+                imagen: "imagenes/image42.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -501,7 +501,7 @@
                 nombre: "T10 3014 24SMD",
                 descripcion: "Voltage: 12 Lumen：168lm Current：116mA Power：1.4W LED chip： Available Color：White ",
                 precio: 0.00,
-                imagen: "imagenes/image43.png",
+                imagen: "imagenes/image43.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -509,7 +509,7 @@
                 nombre: "T10 5050 6SMD CANBUS",
                 descripcion: "Voltage: 12 Lumen：228lm Current：158mA Power：1.9W Available Color：White ",
                 precio: 0.00,
-                imagen: "imagenes/image44.png",
+                imagen: "imagenes/image44.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -517,7 +517,7 @@
                 nombre: "T10 5050 5SMD CANBUS",
                 descripcion: "Voltage: 12 Lumen：240lm Current：166mA Power：2.0W Available Color：White、blue、ICE blue ",
                 precio: 0.00,
-                imagen: "imagenes/image45.png",
+                imagen: "imagenes/image45.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -525,7 +525,7 @@
                 nombre: "T10 5050 9SMD CANBUS",
                 descripcion: "Voltage: 12 Lumen：276lm Current：191mA Power：2.3W Available Color：White ",
                 precio: 0.00,
-                imagen: "imagenes/image46.png",
+                imagen: "imagenes/image46.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -533,14 +533,14 @@
                 nombre: "T10 3030 3SMD CANBUS",
                 descripcion: "Voltage: 12 Lumen：204lM Current：141mA Power：1.7W Available Color：White Feature: dual-polarized ",
                 precio: 0.00,
-                imagen: "imagenes/image47.png",
+                imagen: "imagenes/image47.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },            {
                 id: 50,
                 nombre: "T10 4014 19SMD CANBUS",
                 descripcion: "Voltage: 12 Lumen：324lm Current：225mA Power：2.7W Available Color：White ",
                 precio: 0.00,
-                imagen: "imagenes/image48.png",
+                imagen: "imagenes/image48.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -548,7 +548,7 @@
                 nombre: "T10 4014 27SMD CANBUS",
                 descripcion: "Voltage: 12 Lumen：312lm Current：216mA Power：2.6W Available Color：White ",
                 precio: 0.00,
-                imagen: "imagenes/image49.png",
+                imagen: "imagenes/image49.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -556,7 +556,7 @@
                 nombre: "T10 3030 3SMD",
                 descripcion: "Voltage: 12 Lumen：84lm Current：58mA Power：0.7W Available Color：White、ICE blue ",
                 precio: 0.00,
-                imagen: "imagenes/image50.png",
+                imagen: "imagenes/image50.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -564,7 +564,7 @@
                 nombre: "T10-6+2SMDT10 3030 3SMD",
                 descripcion: "Voltage: 12 Lumen：84lm Current：58mA Power：0.7W Available Color：White、ICE blue ",
                 precio: 0.00,
-                imagen: "imagenes/image51.png",
+                imagen: "imagenes/image51.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -580,7 +580,7 @@
                 nombre: "Festoon 1860 1SMD CANBUS",
                 descripcion: "Voltage: 12-24 Lumen：312lm Current：216mA Power：2.6W Available Color：White Feature: dual-polarized ",
                 precio: 0.00,
-                imagen: "imagenes/image53.png",
+                imagen: "imagenes/image53.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -588,7 +588,7 @@
                 nombre: "Festoon 2835 6SMD CANBUS",
                 descripcion: "Voltage: 12-24 Lumen：216lm Current：150mA Power：1.8W Available Color：White Feature: dual-polarized ",
                 precio: 0.00,
-                imagen: "imagenes/image54.png",
+                imagen: "imagenes/image54.jpeg",
                 bases: ["H4", "H7", "H11", "9005"]
             },
             {
@@ -2136,4 +2136,5 @@
         window.onload = renderProductos;
     </script>
 </body>
+
 </html>
